--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -68,4 +68,19 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.column-start {
+  flex: 10%;
+}
+.column-main {
+  flex: 80%;
+}
+.column-end {
+  flex: 10%;
 }
