--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,12 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 .container {
-  display: flex;
-  width: 100%;
-  height: 100%;
 }
-
+.timebox {
+  width: 100%;
+  display: flex;
+  margin: 10px;
+}
 .column-start {
   flex: 10%;
 }
@@ -83,4 +84,8 @@ textarea {
 }
 .column-end {
   flex: 10%;
+  text-align: right;
+}
+input {
+  width: 100%;
 }
